--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -15,6 +15,6 @@
 @import 'cmps/ToyPreview.css';
 @import 'cmps/ToyFilter.css';
 
-@import 'cmps/Chat.css';
+/* @import 'cmps/Chat.css'; */
 
-@import 'cmps/ToyDashboard.css';
+/* @import 'cmps/ToyDashboard.css'; */
