Add style setup

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,3 +1,7 @@
+/* Setup */
+@import 'setup/vars.css';
+@import 'setup/typography.css';
+
 /* Base */
 @import 'base/base.css';
 @import 'base/helpers.css';
