Add PopUp and Chat to the details and fix the popup.cmp

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -18,6 +18,8 @@
 @import 'cmps/ToyDetails.css';
 @import 'cmps/ToyPreview.css';
 @import 'cmps/ToyFilter.css';
+@import 'cmps/Chat.css';
+@import 'cmps/PopUp.css';
 
 /* @import 'cmps/Chat.css'; */
 
