Add doughunt chart

--- a/src/assets/style/setup/vars.css
+++ b/src/assets/style/setup/vars.css
@@ -1,11 +1,11 @@
 :root {
-    --clr1: #ff6b6b;
-    --clr2: #52b69a;
+    --clr1: #e97407;
+    --clr2: #1395e0;
 
 
     --clr1bg: #f2f3f7;
     --clr1bg-light: #ffffff;
-    --clr2bg: #ffd56b;
+    --clr2bg: #eb9c09;
     --clr2bg-light: #f9f3e3;
 
 
